--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css">
     <title> maysachata</title>
 </head>
 <body>
@@ -11,8 +13,11 @@
         <h1 class="cabeçalho-titulo">Programação I </h1>
         <nav class="cabeçalho-menu">
         <ul>
-        <li><a class="cabeçalho-meu-item" href="#"> </a>
-    
-        </header>
+            <li><a class="cabeçalho-menu-item" href="#">Diciplina</a></li>
+            <li><a class="cabeçalho-menu-item" href="#">Professores</a></li>
+            <li><a clas="cabeçalho-menu-item" href="#">Turmas</a></li>
+        </ul>
+        </nav>
+</header>
 </body>
 </html>
